# GaiaNameService

./: .gitignore  GaiaNameService.sln  README.md
GaiaNameClient/: GaiaNameClient.csproj  NameClient.cs  NameToken.cs
Native/: CMakeLists.txt
Native/GaiaNameClient/: CMakeLists.txt  Client.cpp  Client.hpp  GaiaNameClient.hpp  NameClient.cpp  NameClient.hpp  NameToken.cpp  NameToken.hpp  Token.cpp  Token.hpp
